Add framer-motion animations, password protect admin, enhance circuit details
- Installed and integrated framer-motion for smooth UI animations
- Added spring-based sidebar slide animations
- Dashboard cards now have stagger entrance and hover lift effects
- Navigation menu items slide on hover
- Password protected admin page (password: 'pitwall')
- Updated sidebar to be closed by default with localStorage persistence
- Enhanced Circuit Details page with cycling image carousel (5s interval)
- Changed Circuit Details to show 'LATEST GRAND PRIX' chip instead of round number
- Increased Circuit Details hero section height to 50vh with responsive min-height
- Fixed scrolling issue on Circuit Details page
- Dashboard championship cards now show top 10 with VIEW ALL button
- Individual driver/team cards are now clickable
- Race results show +points format
- Various layout and spacing improvements

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@visx/scale": "^3.12.0",
     "@visx/shape": "^3.12.0",
     "@visx/tooltip": "^3.12.0",
+    "framer-motion": "^12.23.25",
     "mapbox-gl": "^3.16.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
