--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "node scripts/generate-changelog.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
